media/sonarr-anime/service-tailnet-fqdn.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime-tailnet-fqdn
  labels:
    app: sonarr-anime
    version: v1
  annotations:
    tailscale.com/hostname: "suitable-starfish.macaroni-pirate.ts.net"
spec:
  type: ExternalName
  externalName: placeholder
