media/sonarr-anime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime
  labels:
    app: sonarr-anime
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app: sonarr-anime
    version: v1
