media/sonarr-anime/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-anime-tailscale
  labels:
    app: sonarr-anime
    version: v1
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-anime
                port:
                  number: 8989
